# HERMES

./: CMakeLists.txt  LICENSE  README.md
examples/: Test_C60.xyz  filtration.txt  snapshots_edge.txt  snapshots_facet.txt  snapshots_vertex.txt
src/: alpha_shape.cpp  alpha_shape.hpp  main.cpp  rips_shape.cpp  rips_shape.hpp  snapshot.cpp  snapshot.hpp  utility.hpp
